# ChangeLog for sec-policy/selinux-base-policy
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base-policy/ChangeLog,v 1.22 2004/05/16 01:22:22 pebenito Exp $

  15 May 2004; Chris PeBenito <pebenito@gentoo.org>
  selinux-base-policy-20040509.ebuild:
  Mark stable.

*selinux-base-policy-20040509 (09 May 2004)

  09 May 2004; Chris PeBenito <pebenito@gentoo.org>
  +selinux-base-policy-20040509.ebuild:
  A few small cleanups. Make PaX non exec pages macro based on arch. Large
  portage update, get rid of portage_exec_fetch_t, portage will setexec. Add
  global_ssp tunable.

*selinux-base-policy-20040418 (18 Apr 2004)

  18 Apr 2004; Chris PeBenito <pebenito@gentoo.org>
  +selinux-base-policy-20040418.ebuild:
  New release for checkpolicy 1.10

*selinux-base-policy-20040414 (14 Apr 2004)

  14 Apr 2004; Chris PeBenito <pebenito@gentoo.org>
  -selinux-base-policy-20040408.ebuild, +selinux-base-policy-20040414.ebuild:
  Minor updates

*selinux-base-policy-20040408 (08 Apr 2004)

  08 Apr 2004; Chris PeBenito <pebenito@gentoo.org>
  selinux-base-policy-20040408.ebuild:
  New update. Users.fc is now deprecated, as the contexts for user directories
  is now automatically generated. Portage fetching of distfiles now has a
  subdomain, for dropping priviledges.

  28 Feb 2004; Chris PeBenito <pebenito@gentoo.org>
  selinux-base-policy-20040225.ebuild:
  Mark stable.

*selinux-base-policy-20040225 (25 Feb 2004)

  25 Feb 2004; Chris PeBenito <pebenito@gentoo.org>
  selinux-base-policy-20040225.ebuild:
  New support for PaX ACL hooks. Addition of tunable.te for configurable policy
  options. Rewrite of portage.te. Now auto-transition for sysadm is default, can
  reenable portage_r by tunable.te. Makefile update from NSA CVS.

*selinux-base-policy-20040209 (09 Feb 2004)

  09 Feb 2004; Chris PeBenito <pebenito@gentoo.org>
  selinux-base-policy-20040209.ebuild: