@@ -1,6 +1,8 @@
+MD5 8ca09379587a3ee49cf77c922667d3f9 selinux-base-policy-20040604.ebuild 2658
 MD5 2b9a3f12ac151d0b4c71816e637589b9 selinux-base-policy-20040225.ebuild 2199
-MD5 30c2a9c8aeb2bafe1ab6cde535ef3bf2 ChangeLog 7190
+MD5 d1f831f118a6cdb36c32f6e0026f842f ChangeLog 7397
 MD5 b111dbc4552261aebaa3b55e164f31a1 selinux-base-policy-20040509.ebuild 2655
 MD5 808b5f7f5d6654666e9193672d463229 metadata.xml 473
 MD5 7afea4eea1a3c5611ca773551fbd1bb5 files/digest-selinux-base-policy-20040225 80
+MD5 0c51e2c101c04d1a58f6da20add86a86 files/digest-selinux-base-policy-20040604 80
 MD5 0671869ee0d92a38cfabe4491da88e1c files/digest-selinux-base-policy-20040509 80
