@@ -1,0 +1,1 @@
+MD5 d33b40353796d47b588f46de7b74c695 selinux-base-policy-20040604.tar.bz2 68772
